# bare

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindHypodermic.cmake  FindSDL_gpu.cmake
src/: main.cpp
src/System/: Application.cpp  Application.hpp  Exception.cpp  Exception.hpp  IApplication.hpp  Window.cpp  Window.hpp
src/System/Display/: AspectRatio.cpp  AspectRatio.hpp  IContextHandle.hpp  IWindow.hpp  SdlContextHandle.cpp  SdlContextHandle.hpp  SdlWindow.cpp  SdlWindow.hpp  Window.cpp  Window.hpp  WindowCloseEvent.hpp  WindowRenderEvent.hpp
src/System/Events/: Dispatch.cpp  Dispatch.hpp  Event.cpp  Event.hpp  Handler.hpp  IDispatch.hpp
src/System/Logging/: Logger.hpp
src/System/Renderer/: BgfxRenderer.cpp  BgfxRenderer.hpp  IRenderer.hpp
